fixed background on mobile

--- a/public/css/source/main.css
+++ b/public/css/source/main.css
@@ -23,10 +23,9 @@ body {
 }
 
 .body-container {
-    background-image: url('../../img/background/1080_Paciorek_Mtns.jpg');
-    background-attachment: fixed;
+    /*background-image: url('../../img/background/600_Paciorek_Mtns.jpg');*/
     color:white;
-    min-height:1080px;
+
 }
 
 .content-container:focus {
@@ -43,16 +42,16 @@ body {
 }
 
 .content-bg-left, .content-bg-left.flex-sm {
-    background-color: rgba(217,87,222,0.5);
+    background-color: rgba(217,87,222,1);
 }
 
 .content-bg-mid, .content-bg-mid.flex-sm {
-    background-color: rgba(222,149,87,0.5);
+    background-color: rgba(222,149,87,1);
 
 
 }
 .content-bg-right, .content-bg-right.flex-sm {
-    background-color:rgba(87,159,222,0.5);
+    background-color:rgba(87,159,222,1);
 }
 
 .image-container {
@@ -64,7 +63,12 @@ body {
 }
 
 @media screen and (min-width: 600px){
-
+    .body-container{
+        min-height:1080px;
+        background-image: url('../../img/background/1080_Paciorek_Mtns.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+    }
 
 
     .content-container.flex-gt-sm-90 {
